--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
-blank_issues_enabled: false
+blank_issues_enabled: true # Change to false for no blank issues
 contact_links:
   - name: Community Support
     url: https://discord.gg/unblock
